--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -435,7 +435,7 @@
   issn       = {1365-8816, 1362-3087},
 }
 
-@article{khouzam,
+@article{khouzam_2013,
   author     = {Khouzam, B. and H.Frezza-Buet},
   title      = {Distributed recurrent self-organization for tracking the state of non-stationary partially observable dynamical systems},
   journal    = {Biologically Inspired Cognitive Architectures},
@@ -539,14 +539,6 @@
   year       = 2010,
   pages      = 6,
   month      = dec,
-}
-
-@inproceedings{ASOM,
-  author     = {Johnsson, Magnus and Balkenius, Christian and Hesslow, Germund},
-  title      = {Associative Self-Organizing Map},
-  booktitle  = {Proc. {IJCCI'09}},
-  year       = 2009,
-  pages      = {363--370},
 }
 
 @article{Horvth2009AnED,
@@ -936,7 +928,7 @@
 
 @article{miikkulainen_script_1992,
   author     = {Miikkulainen, Risto},
-  title      = {{SCRIPT} {RECOGNITION} {WITH} {HIERARCHICAL} {FEATURE} {MAPS} y},
+  title      = {Script Recognition with Hierarchical Feature Maps},
   journal    = {Connection Science},
   year       = 1992,
   volume     = 2,
@@ -1085,6 +1077,7 @@
   author     = {Johnsson, Magnus and Balkenius, Christian},
   title      = {Associating {SOM} {Representations} of {Haptic} {Submodalities}},
   journal    = {Computer Science},
+  year = 2008
 
 }
 
@@ -1116,3 +1109,80 @@
 	keywords = {Clustering algorithms, Humans, Data mining, Neural networks, Self organizing feature maps, Data analysis, Computer science, Unsupervised learning, Pattern analysis, Software engineering},
 }
 
+
+@article{escobar-juarez_self-organized_2016,
+	title = {A {Self}-{Organized} {Internal} {Models} {Architecture} for {Coding} {Sensory}–{Motor} {Schemes}},
+	abstract = {Cognitive robotics research draws inspiration from theories and models on cognition, as conceived by neuroscience or cognitive psychology, to investigate biologically plausible computational models in artificial agents. In this field, the theoretical framework of Grounded Cognition provides epistemological and methodological grounds for the computational modeling of cognition. It has been stressed in the literature that simulation, prediction, and multi-modal integration are key aspects of cognition and that computational architectures capable of putting them into play in a biologically plausible way are a necessity. Research in this direction has brought extensive empirical evidence, suggesting that Internal Models are suitable mechanisms for sensory–motor integration. However, current Internal Models architectures show several drawbacks, mainly due to the lack of a unified substrate allowing for a true sensory–motor integration space, enabling flexible and scalable ways to model cognition under the embodiment hypothesis constraints. We propose the Self-Organized Internal Models Architecture (SOIMA), a computational cognitive architecture coded by means of a network of self-organized maps, implementing coupled internal models that allow modeling multi-modal sensory–motor schemes. Our approach addresses integrally the issues of current implementations of Internal Models. We discuss the design and features of the architecture, and provide empirical results on a humanoid robot that demonstrate the benefits and potentialities of the SOIMA concept for studying cognition in artificial agents.},
+	language = {en},
+	journal = {Frontiers in Robotics and AI},
+	author = {Escobar-Juárez, Esau and Schillaci, Guido and Hermosillo-Valadez, Jorge and Lara-Guzmán, Bruno},
+	month = apr,
+	year = {2016},
+}
+
+
+
+%biologie
+
+
+@article{eckert_cross-modal_2008,
+	title = {A cross-modal system linking primary auditory and visual cortices: {Evidence} from intrinsic {fMRI} connectivity analysis},
+	volume = {29},
+	shorttitle = {A cross-modal system linking primary auditory and visual cortices},
+	abstract = {Recent anatomical and electrophysiological evidence in primates indicates the presence of direct connections between primary auditory and primary visual cortex that constitute cross-modal systems. We examined the intrinsic functional connectivity (fcMRI) of putative primary auditory cortex in 32 young adults during resting state scanning. We found that the medial Heschl’s gyrus was strongly coupled, in particular, to visual cortex along the anterior banks of the calcarine ﬁssure. This observation was conﬁrmed using novel group-level, tensor-based independent components analysis. fcMRI analysis revealed that although overall coupling between the auditory and visual cortex was signiﬁcantly reduced when subjects performed a visual perception task, coupling between the anterior calcarine cortex and auditory cortex was not disrupted. These results suggest that primary auditory cortex has a functionally distinct relationship with the anterior visual cortex, which is known to represent the peripheral visual ﬁeld. Our study provides novel, fcMRI-based, support for a neural system involving low-level auditory and visual cortices. Hum Brain Mapp 29:848–857, 2008. VC 2008 Wiley-Liss, Inc.},
+	language = {en},
+	number = {7},
+	journal = {Human Brain Mapping},
+	author = {Eckert, Mark A. and Kamdar, Nirav V. and Chang, Catherine E. and Beckmann, Christian F. and Greicius, Michael D. and Menon, Vinod},
+	month = jul,
+	year = {2008},
+	pages = {848--857},
+}
+
+@article{Buonamente2015DiscriminatingAS,
+  title={Discriminating and simulating actions with the associative self-organising map},
+  author={Miriam Buonamente and Haris Dindo and Magnus Johnsson},
+  journal={Connection Science},
+  year={2015},
+  volume={27},
+  pages={118 - 136}
+}
+
+@inproceedings{Strickert2003UnsupervisedRS,
+  title={Unsupervised Recursive Sequence Processing},
+  author={Marc Strickert and Barbara Hammer and Sebastian Blohm},
+  booktitle={ESANN},
+  year={2003}
+}
+
+
+@article{gil_sarasom_2015,
+	title = {{SARASOM}: a supervised architecture based on the recurrent associative {SOM}},
+	volume = {26},
+	shorttitle = {{SARASOM}},
+	abstract = {We present and evaluate a novel supervised recurrent neural network architecture, the SARASOM, based on the associative self-organizing map. The performance of the SARASOM is evaluated and compared with the Elman network as well as with a hidden Markov model (HMM) in a number of prediction tasks using sequences of letters, including some experiments with a reduced lexicon of 15 words. The results were very encouraging with the SARASOM learning better and performing with better accuracy than both the Elman network and the HMM.},
+	language = {en},
+	number = {5},
+	journal = {Neural Computing and Applications},
+	author = {Gil, David and Garcia-Rodriguez, Jose and Cazorla, Miguel and Johnsson, Magnus},
+	year = {2015}
+}
+
+
+@article{Strickert2005MergeSF,
+  title={Merge SOM for temporal data},
+  author={Marc Strickert and Barbara Hammer},
+  journal={Neurocomputing},
+  year={2005},
+  volume={64},
+  pages={39-71}
+}
+
+
+@phdthesis{khouzam_neural_2014,
+	title = {Neural {Networks} as {Cellular} {Computing} {Models} for {Temporal} {Sequence} {Processing}},
+	school = {Supélec},
+	author = {Khouzam, Bassem},
+	month = feb,
+	year = {2014}
+}
